--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Trabajos</a></li>
-			<li><a href="#">Sobre Nosotros</a></li>
+			<li><a href="#">Nosotros</a></li>
 			<li><a href="#">Contacto</a></li>
 		</ul>
 		<button class="icon" id="toggle">
